build(deps): bump beautiful-jekyll-next

--- a/_posts/2025-01-06-welcome.md
+++ b/_posts/2025-01-06-welcome.md
@@ -6,7 +6,8 @@ gh-repo: LizardByte/LizardByte.github.io
 gh-badge: [follow, star]
 tags: [news]
 comments: true
-author: ReenigneArcher
+authors:
+  - github: ReenigneArcher
 ---
 
 We're thrilled to have you here. This blog is your go-to source for all the latest announcements, updates, and news about LizardByte projects. Whether you're a developer, a tech enthusiast, or just curious about what we do, you'll find valuable insights and information here.
