--- a/_posts/releases/sunshine/2025-01-18-v2025.118.151840.md
+++ b/_posts/releases/sunshine/2025-01-18-v2025.118.151840.md
@@ -6,7 +6,8 @@ gh-badge: [follow, fork, star]
 tags: [release, sunshine]
 release-tag: v2025.118.151840
 comments: true
-author: LizardByte-bot
+authors:
+  - github: LizardByte-bot
 ---
 
 ## Attention
