--- a/_posts/releases/sunshine/2025-06-28-v2025.628.4510.md
+++ b/_posts/releases/sunshine/2025-06-28-v2025.628.4510.md
@@ -6,7 +6,8 @@ gh-repo: LizardByte/Sunshine
 gh-badge: [follow, fork, star]
 tags: [release, sunshine]
 comments: true
-author: LizardByte-bot
+authors:
+  - github: LizardByte-bot
 ---
 
 ## Attention
