style(blog): add thumbnail-img for release posts

--- a/_posts/releases/sunshine/2025-01-18-v2025.118.151840.md
+++ b/_posts/releases/sunshine/2025-01-18-v2025.118.151840.md
@@ -1,10 +1,11 @@
 ---
 layout: release
 title: Sunshine v2025.118.151840 Released
+release-tag: v2025.118.151840
 gh-repo: LizardByte/Sunshine
 gh-badge: [follow, fork, star]
 tags: [release, sunshine]
-release-tag: v2025.118.151840
+thumbnail-img: https://app.lizardbyte.dev/dashboard/github/openGraphImages/Sunshine_624x312.png
 comments: true
 authors:
   - github: LizardByte-bot
