--- a/_posts/releases/sunshine/2025-01-22-v2025.122.141614.md
+++ b/_posts/releases/sunshine/2025-01-22-v2025.122.141614.md
@@ -5,6 +5,7 @@ release-tag: v2025.122.141614
 gh-repo: LizardByte/Sunshine
 gh-badge: [follow, fork, star]
 tags: [release, sunshine]
+thumbnail-img: https://app.lizardbyte.dev/dashboard/github/openGraphImages/Sunshine_624x312.png
 comments: true
 authors:
   - github: LizardByte-bot
