feat(blog): add readtime

--- a/_posts/2025-01-06-welcome.md
+++ b/_posts/2025-01-06-welcome.md
@@ -4,6 +4,7 @@ title: Welcome
 subtitle: to the blog of LizardByte!
 gh-repo: LizardByte/LizardByte.github.io
 gh-badge: [follow, star]
+readtime: true
 tags: [news]
 comments: true
 authors:
